versions/3.4.2/docs/SubtaskReference.md
# SubtaskReference

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | [optional] 
**kwargs** | **dict(str, str)** |  | [optional] [readonly] 
**graph_layout** | **dict(str, str)** |  | [optional] [readonly] 
**validation_error** | **str** |  | [optional] [readonly] 
**trigger** | **str** |  | [optional] [readonly] 
**name** | **str** |  | [optional] [readonly] 
**noop_dont_save** | **bool** |  | [optional] [readonly] 
**no_concurrency** | **bool** |  | [optional] [readonly] 
**timeout** | **int** |  | [optional] [readonly] 
**log_variable** | **bool** |  | [optional] [readonly] 
**task** | **str** |  | [optional] [readonly] 
**condition_variable** | **str** |  | [optional] [readonly] 
**condition_value** | **str** |  | [optional] [readonly] 
**sync** | **bool** |  | [optional] [readonly] 
**queue** | **str** |  | [optional] [readonly] 
**enqueue_at_front** | **bool** |  | [optional] [readonly] 
**parent** | **int** |  | [optional] [readonly] 
**relative_to** | **int** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


