versions/3.5.0/docs/SubtaskReference.md
# SubtaskReference


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**kwargs** | **{str: (str,)}** |  | [optional] [readonly] 
**graph_layout** | **{str: (str, none_type)}** |  | [optional] [readonly] 
**validation_error** | **str** |  | [optional] [readonly] 
**trigger** | **str, none_type** |  | [optional] [readonly] 
**name** | **str, none_type** |  | [optional] [readonly] 
**noop_dont_save** | **bool** |  | [optional] [readonly] 
**no_concurrency** | **bool** |  | [optional] [readonly] 
**timeout** | **int, none_type** |  | [optional] [readonly] 
**log_variable** | **bool** |  | [optional] [readonly] 
**task** | **str, none_type** |  | [optional] [readonly] 
**condition_variable** | **str, none_type** |  | [optional] [readonly] 
**condition_value** | **str, none_type** |  | [optional] [readonly] 
**sync** | **bool** |  | [optional] [readonly] 
**queue** | **str, none_type** |  | [optional] [readonly] 
**enqueue_at_front** | **bool** |  | [optional] [readonly] 
**parent** | **int** |  | [optional] [readonly] 
**relative_to** | **int, none_type** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


